--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       </form>
       <div class="nav-buttons w-full mt-6 flex justify-center gap-4">
         <button onclick="location.href='team_list.html'">Team List</button>
-        <button onclick="location.href='fixtures.html'">Fixture List</button>
+        <button onclick="location.href='team_fixtures.html'">Fixture List</button>
       </div>
     </aside>
   </div>
@@ -214,3 +214,4 @@
   </script>
 </body>
 </html>
+
