--- a/team_list.html
+++ b/team_list.html
@@ -67,10 +67,10 @@
     tbody tr:hover {
       background-color: #E0F2FE; /* sky-100 */
     }
-    /* Fixed height for team content to avoid jumping */
+    /* Increased fixed height for team content to show more players without scroll */
     #teamContent {
-      min-height: 350px;
-      max-height: 350px;
+      min-height: 600px;
+      max-height: 600px;
       overflow-y: auto;
       transition: height 0.3s ease;
     }
