--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -1,63 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>6-A-Side Football Tournament 2025</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-blue-700 text-white font-sans">
-  <div class="max-w-4xl mx-auto p-6">
-    <!-- Header -->
-    <div class="text-center mb-6">
-      <h1 class="text-4xl font-extrabold flex justify-center items-center gap-3">
-        ⚽ 6-A-Side Football Tournament 2025 🏆
-      </h1>
-      <p class="text-lg mt-2">24th August 2025 | Your Ground Name</p>
-    </div>
+<section>
+  <h2 class="text-2xl mb-4">Group-stage &mdash; Double Round-robin (12 matches)</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Time</th>
+        <th>Group</th>
+        <th>Fixture</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr><td>09:00–09:22</td><td>Group A</td><td>Ayon Roy vs Subhojit Dutta</td></tr>
+      <tr><td>09:22–09:44</td><td>Group B</td><td>Shubhanjan Basu vs Srinjoy Kundu</td></tr>
+      <tr><td>09:44–10:06</td><td>Group A</td><td>Subhojit Dutta vs Ritam Chowdhury</td></tr>
+      <tr><td>10:06–10:28</td><td>Group B</td><td>Srinjoy Kundu vs Subhamoy Das</td></tr>
+      <tr><td>10:28–10:50</td><td>Group A</td><td>Ritam Chowdhury vs Ayon Roy</td></tr>
+      <tr><td>10:50–11:12</td><td>Group B</td><td>Subhamoy Das vs Shubhanjan Basu</td></tr>
+      <tr><td>11:12–11:34</td><td>Group A</td><td>Subhojit Dutta vs Ayon Roy</td></tr>
+      <tr><td>11:34–11:56</td><td>Group B</td><td>Srinjoy Kundu vs Shubhanjan Basu</td></tr>
+      <tr><td>11:56–12:18</td><td>Group A</td><td>Ritam Chowdhury vs Subhojit Dutta</td></tr>
+      <tr><td>12:18–12:40</td><td>Group B</td><td>Subhamoy Das vs Srinjoy Kundu</td></tr>
+      <tr><td>12:40–13:02</td><td>Group A</td><td>Ayon Roy vs Ritam Chowdhury</td></tr>
+      <tr><td>13:02–13:24</td><td>Group B</td><td>Shubhanjan Basu vs Subhamoy Das</td></tr>
+    </tbody>
+  </table>
+</section>
 
-    <!-- Fixtures Table -->
-    <div class="bg-white text-black rounded-lg shadow-lg overflow-hidden">
-      <table class="w-full text-left border-collapse">
-        <thead class="bg-blue-600 text-white">
-          <tr>
-            <th class="py-3 px-4">Time</th>
-            <th class="py-3 px-4">Fixture</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="border-b"><td class="py-2 px-4">09:00–09:22</td><td class="py-2 px-4">Ayon Roy vs Subhojit Dutta</td></tr>
-          <tr class="border-b bg-gray-100"><td class="py-2 px-4">09:22–09:44</td><td class="py-2 px-4">Shubhanjan Basu vs Srinjoy Kundu</td></tr>
-          <tr class="border-b"><td class="py-2 px-4">09:44–10:06</td><td class="py-2 px-4">Subhojit Dutta vs Ritam Chowdhury</td></tr>
-          <tr class="border-b bg-gray-100"><td class="py-2 px-4">10:06–10:28</td><td class="py-2 px-4">Srinjoy Kundu vs Subhamoy Das</td></tr>
-          <tr class="border-b"><td class="py-2 px-4">10:28–10:50</td><td class="py-2 px-4">Ritam Chowdhury vs Ayon Roy</td></tr>
-          <tr class="border-b bg-gray-100"><td class="py-2 px-4">10:50–11:12</td><td class="py-2 px-4">Subhamoy Das vs Shubhanjan Basu</td></tr>
-          <tr class="border-b"><td class="py-2 px-4">11:12–11:34</td><td class="py-2 px-4">Subhojit Dutta vs Ayon Roy</td></tr>
-          <tr class="border-b bg-gray-100"><td class="py-2 px-4">11:34–11:56</td><td class="py-2 px-4">Srinjoy Kundu vs Shubhanjan Basu</td></tr>
-          <tr class="border-b"><td class="py-2 px-4">11:56–12:18</td><td class="py-2 px-4">Ritam Chowdhury vs Subhojit Dutta</td></tr>
-          <tr class="border-b bg-gray-100"><td class="py-2 px-4">12:18–12:40</td><td class="py-2 px-4">Subhamoy Das vs Srinjoy Kundu</td></tr>
-          <tr class="border-b"><td class="py-2 px-4">12:40–13:02</td><td class="py-2 px-4">Ayon Roy vs Ritam Chowdhury</td></tr>
-          <tr><td class="py-2 px-4">13:02–13:24</td><td class="py-2 px-4">Shubhanjan Basu vs Subhamoy Das</td></tr>
-        </tbody>
-      </table>
-    </div>
+<section>
+  <h2 class="text-2xl mb-4">Knockout Stage (with 3rd-place match before Final)</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Time</th>
+        <th>Match</th>
+        <th>Fixture</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr><td>13:24–13:46</td><td>Semi 1</td><td>Winner Group A vs Runner-up Group B</td></tr>
+      <tr><td>13:46–14:08</td><td>Semi 2</td><td>Winner Group B vs Runner-up Group A</td></tr>
+      <tr><td>14:08–14:30</td><td>3rd Place Match</td><td>Loser SF1 vs Loser SF2</td></tr>
+      <tr><td>14:30–14:52</td><td>Final</td><td>Winner SF1 vs Winner SF2</td></tr>
+    </tbody>
+  </table>
+</section>
 
-    <!-- Knockout Matches -->
-    <div class="mt-8 bg-white text-black rounded-lg shadow-lg p-4">
-      <h2 class="text-2xl font-bold mb-3 text-center text-blue-700">Knockout Stage</h2>
-      <ul class="space-y-2">
-        <li><strong>13:24–13:46</strong> — Semi 1: Winner Group A vs Runner-up Group B</li>
-        <li><strong>13:46–14:08</strong> — Semi 2: Winner Group B vs Runner-up Group A</li>
-        <li><strong>14:08–14:30</strong> — 3rd Place: Loser SF1 vs Loser SF2</li>
-        <li><strong>14:30–14:52</strong> — Final: Winner SF1 vs Winner SF2</li>
-      </ul>
-    </div>
-
-    <!-- Rules -->
-    <div class="mt-8 text-center text-sm">
-      <p>Matches: 2 × 8 min halves, 3 min halftime, 3 min buffer</p>
-      <p>Tie-breakers: Points → GD → GS → H2H → Pens</p>
-    </div>
-  </div>
-</body>
-</html>
+<section>
+  <h2 class="text-2xl mb-4">Tournament Information & Notes</h2>
+  <ul>
+    <li><strong>Tournament finish time:</strong> ~14:52 IST (not counting prize-giving)</li>
+    <li><strong>Total tournament runtime:</strong> 352 minutes (5 hr 52 min) from first whistle to last</li>
+    <li><strong>No back-to-back matches:</strong> Guaranteed by schedule — every team’s matches separated by at least one other match</li>
+    <li><strong>Match slot composition:</strong> 8 minute first half + 3 minute halftime + 8 minute second half + 3 minute buffer = 22 minutes</li>
+    <li><strong>Warm-up / admin:</strong> Recommend 20–30 minutes pre-tournament window before 09:00 for captains’ meeting and warm-ups</li>
+    <li><strong>Contingency:</strong> Recommend 15–30 minutes break after Semifinals before 3rd-place and Final matches for delays or medical needs</li>
+    <li><strong>Referee breaks:</strong> Built-in by alternating matches; consider longer 10–15 min break for officials if needed</li>
+    <li><strong>Tiebreakers & Penalties:</strong> Points → Goal difference → Goals scored → Head-to-head → Penalties if still needed</li>
+    <li><strong>Prize ceremony:</strong> Add 10–15 minutes after Final for awards and presentation</li>
+  </ul>
+</section>
