--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html> <html lang="en" > <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1" /> <title>Independence Cup 2025 - Final Schedule</title> <script src="https://cdn.tailwindcss.com"></script> <style> body { font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; background: #f1f5f9; /* Tailwind slate-100 */ color: #1e293b; /* Tailwind slate-800 */ padding: 2.5rem 1rem; } .container { max-width: 800px; margin: auto; background: white; border-radius: 0.75rem; box-shadow: 0 12px 24px rgba(100, 116, 139, 0.15); padding: 2rem 2.5rem; } h1, h2 { font-weight: 800; color: #0f172a; /* Tailwind slate-900 */ } h1 { font-size: 2.5rem; text-align: center; margin-bottom: 1.5rem; letter-spacing: 0.05em; } h2 { font-size: 1.75rem; margin-bottom: 1rem; border-bottom: 2px solid #e2e8f0; /* Tailwind slate-200 */ padding-bottom: 0.25rem; } p { font-size: 1rem; margin-bottom: 0.5rem; color: #475569; /* Tailwind slate-600 */ } table { width: 100%; border-collapse: separate; border-spacing: 0 0.3rem; font-size: 1rem; margin-top: 1rem; margin-bottom: 1.5rem; } thead tr { background: #e0e7ff; /* Tailwind indigo-100 */ color: #3730a3; /* Tailwind indigo-800 */ text-transform: uppercase; font-weight: 700; letter-spacing: 0.05em; border-radius: 0.5rem; } th, td { padding: 0.75rem 1rem; background: white; box-shadow: 0 2px 5px rgba(100,116,139,0.05); } tbody tr:hover td { background: #f0f9ff; /* Tailwind sky-100 */ box-shadow: 0 4px 12px rgba(59,130,246,0.1); transition: all 0.3s ease; } ul { margin-left: 1.25rem; list-style-type: disc; margin-bottom: 1.25rem; color: #475569; /* Tailwind slate-600 */ line-height: 1.6; } ul li { margin-bottom: 0.4rem; } </style> </head> <body> <div class="container"> <h1>⚽ Independence Cup 2025 - Final Single-Pitch Schedule 🏆</h1>
+
 <section>
-  <h2 class="text-2xl mb-4">Group-stage &mdash; Double Round-robin (12 matches)</h2>
+  <h2>Groups</h2>
+  <p><strong>Group A:</strong> Ayon Roy, Subhojit Dutta, Ritam Chowdhury</p>
+  <p><strong>Group B:</strong> Shubhanjan Basu, Srinjoy Kundu, Subhamoy Das</p>
+</section>
+
+<section>
+  <h2>Group-stage &mdash; Double Round-robin (12 matches)</h2>
   <table>
     <thead>
       <tr>
@@ -26,7 +34,7 @@
 </section>
 
 <section>
-  <h2 class="text-2xl mb-4">Knockout Stage (with 3rd-place match before Final)</h2>
+  <h2>Knockout Stage (with 3rd-place match before Final)</h2>
   <table>
     <thead>
       <tr>
@@ -45,11 +53,11 @@
 </section>
 
 <section>
-  <h2 class="text-2xl mb-4">Tournament Information & Notes</h2>
+  <h2>Tournament Information & Notes</h2>
   <ul>
     <li><strong>Tournament finish time:</strong> ~14:52 IST (not counting prize-giving)</li>
     <li><strong>Total tournament runtime:</strong> 352 minutes (5 hr 52 min) from first whistle to last</li>
-    <li><strong>No back-to-back matches:</strong> Guaranteed by schedule — every team’s matches separated by at least one other match</li>
+    <li><strong>No back-to-back matches:</strong> Guaranteed by schedule — every team’s matches are separated by at least one other match</li>
     <li><strong>Match slot composition:</strong> 8 minute first half + 3 minute halftime + 8 minute second half + 3 minute buffer = 22 minutes</li>
     <li><strong>Warm-up / admin:</strong> Recommend 20–30 minutes pre-tournament window before 09:00 for captains’ meeting and warm-ups</li>
     <li><strong>Contingency:</strong> Recommend 15–30 minutes break after Semifinals before 3rd-place and Final matches for delays or medical needs</li>
@@ -58,3 +66,4 @@
     <li><strong>Prize ceremony:</strong> Add 10–15 minutes after Final for awards and presentation</li>
   </ul>
 </section>
+</div> </body> </html>
