--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -1,13 +1,63 @@
-<!DOCTYPE html> <html lang="en" > <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1" /> <title>Independence Cup 2025 - Final Schedule</title> <script src="https://cdn.tailwindcss.com"></script> <style> body { font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; background: #f1f5f9; /* Tailwind slate-100 */ color: #1e293b; /* Tailwind slate-800 */ padding: 2.5rem 1rem; } .container { max-width: 800px; margin: auto; background: white; border-radius: 0.75rem; box-shadow: 0 12px 24px rgba(100, 116, 139, 0.15); padding: 2rem 2.5rem; } h1, h2 { font-weight: 800; color: #0f172a; /* Tailwind slate-900 */ } h1 { font-size: 2.5rem; text-align: center; margin-bottom: 1.5rem; letter-spacing: 0.05em; } h2 { font-size: 1.75rem; margin-bottom: 1rem; border-bottom: 2px solid #e2e8f0; /* Tailwind slate-200 */ padding-bottom: 0.25rem; } p { font-size: 1rem; margin-bottom: 0.5rem; color: #475569; /* Tailwind slate-600 */ } table { width: 100%; border-collapse: separate; border-spacing: 0 0.3rem; font-size: 1rem; margin-top: 1rem; margin-bottom: 1.5rem; } thead tr { background: #e0e7ff; /* Tailwind indigo-100 */ color: #3730a3; /* Tailwind indigo-800 */ text-transform: uppercase; font-weight: 700; letter-spacing: 0.05em; border-radius: 0.5rem; } th, td { padding: 0.75rem 1rem; background: white; box-shadow: 0 2px 5px rgba(100,116,139,0.05); } tbody tr:hover td { background: #f0f9ff; /* Tailwind sky-100 */ box-shadow: 0 4px 12px rgba(59,130,246,0.1); transition: all 0.3s ease; } ul { margin-left: 1.25rem; list-style-type: disc; margin-bottom: 1.25rem; color: #475569; /* Tailwind slate-600 */ line-height: 1.6; } ul li { margin-bottom: 0.4rem; } </style> </head> <body> <div class="container"> <h1>⚽ Independence Cup 2025 - Final Single-Pitch Schedule 🏆</h1>
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Independence Cup 2025 - Final Schedule</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+      background: #f8fafc; /* Tailwind slate-50 */
+      color: #334155; /* Tailwind slate-700 */
+      padding: 2rem;
+    }
+    h1, h2, h3 {
+      font-weight: 700;
+    }
+    section {
+      background: white;
+      border-radius: 0.75rem;
+      box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1);
+      padding: 1.5rem 2rem;
+      max-width: 768px;
+      margin: auto;
+      margin-bottom: 2rem;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      font-size: 0.95rem;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
+    th, td {
+      padding: 0.75rem 1rem;
+      border: 1px solid #cbd5e1; /* Tailwind slate-300 */
+      text-align: left;
+    }
+    th {
+      background-color: #e2e8f0; /* Tailwind slate-200 */
+    }
+    ul {
+      margin-left: 1rem;
+      list-style-type: disc;
+      margin-bottom: 1rem;
+    }
+  </style>
+</head>
+<body>
+
+<h1 class="text-4xl text-center mb-8">Independence Cup 2025 - Final Single-Pitch Schedule</h1>
 
 <section>
-  <h2>Groups</h2>
+  <h2 class="text-2xl mb-4">Groups</h2>
   <p><strong>Group A:</strong> Ayon Roy, Subhojit Dutta, Ritam Chowdhury</p>
   <p><strong>Group B:</strong> Shubhanjan Basu, Srinjoy Kundu, Subhamoy Das</p>
 </section>
 
 <section>
-  <h2>Group-stage &mdash; Double Round-robin (12 matches)</h2>
+  <h2 class="text-2xl mb-4">Group-stage &mdash; Double Round-robin (12 matches)</h2>
   <table>
     <thead>
       <tr>
@@ -34,7 +84,7 @@
 </section>
 
 <section>
-  <h2>Knockout Stage (with 3rd-place match before Final)</h2>
+  <h2 class="text-2xl mb-4">Knockout Stage (with 3rd-place match before Final)</h2>
   <table>
     <thead>
       <tr>
@@ -46,24 +96,26 @@
     <tbody>
       <tr><td>13:24–13:46</td><td>Semi 1</td><td>Winner Group A vs Runner-up Group B</td></tr>
       <tr><td>13:46–14:08</td><td>Semi 2</td><td>Winner Group B vs Runner-up Group A</td></tr>
-      <tr><td>14:08–14:30</td><td>3rd Place Match</td><td>Loser SF1 vs Loser SF2</td></tr>
+      <tr><td>14:08–14:30</td><td>3rd-place Match</td><td>Loser SF1 vs Loser SF2</td></tr>
       <tr><td>14:30–14:52</td><td>Final</td><td>Winner SF1 vs Winner SF2</td></tr>
     </tbody>
   </table>
 </section>
 
 <section>
-  <h2>Tournament Information & Notes</h2>
+  <h2 class="text-2xl mb-4">Tournament Information & Notes</h2>
   <ul>
     <li><strong>Tournament finish time:</strong> ~14:52 IST (not counting prize-giving)</li>
     <li><strong>Total tournament runtime:</strong> 352 minutes (5 hr 52 min) from first whistle to last</li>
     <li><strong>No back-to-back matches:</strong> Guaranteed by schedule — every team’s matches are separated by at least one other match</li>
-    <li><strong>Match slot composition:</strong> 8 minute first half + 3 minute halftime + 8 minute second half + 3 minute buffer = 22 minutes</li>
-    <li><strong>Warm-up / admin:</strong> Recommend 20–30 minutes pre-tournament window before 09:00 for captains’ meeting and warm-ups</li>
-    <li><strong>Contingency:</strong> Recommend 15–30 minutes break after Semifinals before 3rd-place and Final matches for delays or medical needs</li>
+    <li><strong>Match slot composition:</strong> 8’ first half + 3’ halftime + 8’ second half + 3’ buffer = 22’</li>
+    <li><strong>Warm-up / admin:</strong> Recommend 20–30 mins pre-tournament window before 09:00 for captains’ meeting and warm-ups</li>
+    <li><strong>Contingency:</strong> Recommend 15–30 mins break after Semifinals before 3rd-place and Final matches for delays or medical</li>
     <li><strong>Referee breaks:</strong> Built-in by alternating matches; consider longer 10–15 min break for officials if needed</li>
-    <li><strong>Tiebreakers & Penalties:</strong> Points → Goal difference → Goals scored → Head-to-head → Penalties if still needed</li>
-    <li><strong>Prize ceremony:</strong> Add 10–15 minutes after Final for awards and presentation</li>
+    <li><strong>Tiebreakers & Pens:</strong> Points → Goal difference → Goals scored → Head-to-head → Penalties if still needed</li>
+    <li><strong>Prize ceremony:</strong> Add 10–15 mins after Final for awards and presentation</li>
   </ul>
 </section>
-</div> </body> </html>
+
+</body>
+</html>
